--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -8,7 +8,7 @@ body{
     color: #fd6e0a;
 }
 
-.btn-peimart{
+.btn-primary{
     border-radius: 5px;
     background: #fd6e0a;
     font-size: 20px;
@@ -22,7 +22,7 @@ body{
     display: flex; 
     justify-content:space-between; 
     align-items: center; 
-
+    margin: 0 200px;
 
 }
 .nav-title{
@@ -56,4 +56,14 @@ nav>a{
 .header{
 
     background-color: #fff8f3;
+}
+
+.banner{
+
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.profile-pic{
+    width: 500px;
 }
