--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,6 +17,19 @@ body{
     color: white;
     padding: 15px 35px;
 }
+.section-title{
+
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+} 
+.section-description{
+
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
 /*nav related styles*/
     nav{
     display: flex; 
@@ -56,14 +69,59 @@ nav>a{
 .header{
 
     background-color: #fff8f3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 
 .banner{
 
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 .profile-pic{
     width: 500px;
 }
+.banner-content{
+    max-width: 500px;
+
+}
+
+.banner-greeting{
+
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+
+}
+
+.benner-title{
+
+    font-size: 85px ;
+    font-weight: 700;
+    margin-top: 2px;
+}
+.benner-dect{
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+
+/*main section style*/
+
+    .about{
+        padding: 130px;
+        border-radius: 10px;
+        background: #FFF8F3;
+        margin: 130px;
+        
+
+        
+       }
+
+
+
+
+/*about section style*/
+
