--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -119,9 +119,16 @@ nav>a{
 
         
        }
-
+main{
+    max-width:1140px;
+    margin: 0 auto;
+}
 
 
 
 /*about section style*/
 
+.abut-info-container{
+
+    display: flex;
+}
