--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -124,6 +124,10 @@ main{
     margin: 0 auto;
 }
 
+main section{
+
+    margin-top: 130px;
+}
 
 
 /*about section style*/
@@ -135,9 +139,39 @@ main{
 .abut-inf{
     text-align: center;
 }
-
+/*skills related styles*/
 #what-i-do-description{
     padding: 30px 150px;
 
 
 }
+
+.class-skills-container{
+
+    display: flex;
+    gap: 24px;
+}
+
+.skill{
+
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-description{
+
+    color: #757575;
+}
+
+/*resume section style */
+
+.resume-colum-title{
+
+    color:  #474747;
+    font-size: 30px;
+    sfont-weight: 700;
+
+}
+
