--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -171,7 +171,21 @@ main section{
 
     color:  #474747;
     font-size: 30px;
-    sfont-weight: 700;
+    font-weight: 700;
 
 }
+.resume-container{
 
+    display: flex;
+    gap: 50px;
+}
+.resume-item-description,.resume-item-institute{
+
+    color: #757575;
+
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700px;
+}
