--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -184,8 +184,22 @@ main section{
     color: #757575;
 
 }
+.resume-item-institute{
+
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
 .resume-item-title{
     color: #474747;
     font-size: 25px;
     font-weight: 700px;
+    margin-bottom: 10px;
+}
+.resume-container hr{
+    margin: 30px;
+}
+.Downloa-CV{
+
+    text-align: center;
+    margin-top: 50px;
 }
