--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -204,3 +204,10 @@ main section{
     margin-top: 50px;
 }
 /* footer section style */
+
+footer{
+    display: flex;
+    background: #FFF8F3;
+    padding: 130px 200px ;
+     margin-top:100px ;
+}
