--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -207,7 +207,27 @@ main section{
 
 footer{
     display: flex;
+    gap: 100px;
     background: #FFF8F3;
     padding: 130px 200px ;
      margin-top:100px ;
+}
+.footer-colum{
+
+    width: 50%;
+}
+.socal-links{
+
+    margin-right: 25px;
+    
+}
+.contact input[type="text"],.contact input[type="Email"],textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0;
+    width: 100%;
 }
